--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -417,6 +417,7 @@ body
                     height: 51px;
                     background: $black-silver;
                     padding-top: 12px;
+                    z-index: 2;
 
                     .btn
                     {
@@ -599,6 +600,7 @@ body
                                 -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
                                 -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
                                 box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                                left: 0;
 
                                 li
                                 {
@@ -754,6 +756,62 @@ body
             {
                 flex: 0 0 50%;
                 max-width: 50%;
+
+                .btn-group-action
+                {
+                    @extend #LEFT, #RELATIVE;
+                    
+                    .btn-full 
+                    { @extend #HIDE; }
+
+                    .btn-small
+                    {
+                        @extend #NO-BORDER;
+                        background: transparent;
+                        margin-left: -5px;
+                        color: $purple;
+                    }
+
+                    ul.toggle-action
+                    {
+                        @extend #ABSOLUTE, #SHOW; 
+                        padding: 5px 0;
+                        background: $light;
+                        min-width: 170px;
+                        z-index: 99;
+                        -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                        -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.25);
+                        left: 0;
+
+                        li
+                        {
+                            @extend #LEFT;
+                            width: $full-width;
+
+                            a
+                            {
+                                @extend #LEFT, #NO-UNDERLINE;
+                                width: $full-width;
+                                font-size: 12px;    font-weight: 400;
+                                color: $purple;
+                                padding: 5px 15px;
+
+                                &:hover
+                                {
+                                    color: $pink;
+                                    background: $silver;
+                                }
+                            }
+                        }
+
+                        li.active a
+                        {
+                            color: $pink;
+                            background: $silver;
+                        }
+                    }
+                }
             }
 
             .division-3
