--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -61,6 +61,43 @@ body
             background: $light-silver;
         }
 
+        .search
+        {
+            @extend #LEFT, #RELATIVE;
+            width: $full-width; height: 50px;
+            background: $navy-silver;
+            padding: 10px;
+
+            &::before
+            {
+                @extend #ABSOLUTE;
+                -moz-osx-font-smoothing: grayscale;
+                -webkit-font-smoothing: antialiased;
+                display: inline-block;
+                font-style: normal;
+                font-variant: normal;
+                text-rendering: auto;
+                line-height: 1;
+                font-family: "Font Awesome 5 Free";
+                font-weight: 900;
+                content: "\f002";
+                top: 18px;  left: 20px;
+                color: $purple;
+            }
+
+            input
+            {
+                width: $full-width; height: 30px;
+                border-radius: 7px; 
+                background: $light;
+                border: solid 1px $dark-silver;
+                font-size: 11px;    font-weight: normal;
+                color: $purple;
+                padding: 0 10px;
+                padding-left: 35px;
+            }
+        }
+
         .left-sb
         {
             @extend #ABSOLUTE;
@@ -279,25 +316,6 @@ body
                 font-size: 12px;    font-weight: 600;
             }
 
-            .search
-            {
-                @extend #LEFT;
-                width: $full-width; height: 50px;
-                background: $navy-silver;
-                padding: 10px;
-
-                input
-                {
-                    width: $full-width; height: 30px;
-                    border-radius: 7px; 
-                    background: $light;
-                    border: solid 1px $dark-silver;
-                    font-size: 11px;    font-weight: normal;
-                    color: $purple;
-                    padding: 0 10px;
-                }
-            }
-
             ul.nav.nav-tabs
             {
                 width: $full-width;
@@ -421,6 +439,8 @@ body
 
                     .btn-group-action
                     {
+                        @extend #LEFT;
+
                         .btn-small, .toggle-action
                         { @extend #HIDE; }
                     }
@@ -481,7 +501,7 @@ body
 
                     .date-msg
                     {
-                        @extend #CENTER, #RELATIVE;
+                        @extend #CENTER, #RELATIVE, #LEFT;
                         width: $full-width;
                         font-size: 10px;    font-weight: bold;
                         color: $concrete;
