Btn close sidebar right

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -875,6 +875,16 @@ body
                         color: $pink;
                         font-size: 15px;    font-weight: 600;
                     }
+
+                    .btn-close
+                    {
+                        @extend #ABSOLUTE, #NO-BORDER;
+                        right: 0;   top: 0;
+                        margin-top: 13px;
+                        background: transparent;
+
+                        i { color: $purple; }
+                    }
                 }
 
                 .info-boxes
