--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,6 +8,9 @@ html, body, #interactions, .content
 
 body
 {
+    .hide
+    { display: none !important; }
+
     p, label, span, a, li
     {
         @if (lightness($silver) < 30) {
